--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -84,13 +84,14 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/radio_group_1" />
 
-        <RadioGroup
-            android:id="@+id/radio_group_2"
+        <LinearLayout
+            android:id="@+id/linearLayout"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
             android:layout_marginStart="16dp"
             android:background="@drawable/shape_answers"
+            android:orientation="vertical"
             android:padding="@dimen/answers_padding"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -121,7 +122,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/answer_2_4" />
-        </RadioGroup>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/text_question3"
@@ -136,7 +137,7 @@
             android:textAppearance="@style/Question"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/radio_group_2" />
+            app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
         <LinearLayout
             android:id="@+id/linearLayout2"
@@ -179,7 +180,7 @@
             app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />
 
         <RadioGroup
-            android:id="@+id/radio_group_3"
+            android:id="@+id/radio_group_2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginEnd="16dp"
@@ -235,7 +236,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/radio_group_3" />
+            app:layout_constraintTop_toBottomOf="@+id/radio_group_2" />
 
         <Button
             android:id="@+id/button_reset"
